--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Project</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://drive.google.com/file/d/1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb/view">Resume</a></li>
             
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -80,7 +81,7 @@
                 <div id="frontend" class="sub-skills">
                     <img class="logo" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" alt="">
                     <img class="logo" src="https://brandeps.com/logo-download/C/CSS-3-logo-vector-01.svg" alt="">
-                    <img class="logo" src="https://www.clipartmax.com/png/middle/150-1504620_javascript-logo.png"
+                    <img class="logo jslogo" src="https://www.clipartmax.com/png/middle/150-1504620_javascript-logo.png"
                         alt="">
                     <img class="logo"
                         src="https://cdn.freebiesupply.com/logos/large/2x/netlify-logo-png-transparent.png" alt="">
@@ -142,8 +143,7 @@
                         <h3>Retomojo</h3>
                         <p>India's leading rental platform brings to you a wide range of products on rent. Experience
                             the freedom to live the life you want, now.</p>
-                        <a href="https://timely-gumdrop-6783b4.netlify.app"><i
-                                class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://timely-gumdrop-6783b4.netlify.app"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -154,8 +154,7 @@
                         <h3>ESPNCricinfo</h3>
                         <p>Find Live Cricket Scores, Match updates, Fixtures, Results, News, Articles, Video highlights
                             only at ESPNcricinfo.</p>
-                        <a href="https://deluxe-buttercream-9cdfdb.netlify.app/"><i
-                                class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://deluxe-buttercream-9cdfdb.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -166,8 +165,7 @@
                         <h3>SigmBid(Tender Management System)</h3>
                         <p>This e-tendering software is a tool that supports run tenders and requests for proposals
                             further efficiently than email and phone.</p>
-                        <a href="https://github.com/niths2703/maxed-wilderness-6454"><i
-                                class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/niths2703/maxed-wilderness-6454"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -192,7 +190,7 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/nitishsrivastava27/"><i
                                 class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://twitter.com/NitishS30698470"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://github.com/niths2703"><i class="fa-brands fa-github"></i></i></a>
                         <a href="https://www.instagram.com/niths27/"><i class="fa-brands fa-instagram"></i></a>
 
                     </div>
