--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
         </div>
     </div>
 
+
+    <!-- portfolio -->
     <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My Projects</h1>
@@ -172,7 +174,7 @@
 
             </div>
 
-            <a href="#" class="btn">See More</a>
+            
         </div>
 
     </div>
