--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
                 <div class="work">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbDEInUHWvjr7O6VnzfskZ3NrABYfxuCq-YQ&usqp=CAU.jpg"
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Rentomojo-logo.png/800px-Rentomojo-logo.png"
                         alt="">
                     <div class="layer">
                         <h3>Retomojo</h3>
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="work">
-                    <img src="C:\Users\nsriv\Downloads\espn.png" alt="">
+                    <img src="https://w7.pngwing.com/pngs/207/932/png-transparent-indian-premier-league-espncricinfo-cricket-espn-inc-cricket-text-logo-news.png" alt="">
                     <div class="layer">
 
                         <h3>ESPNCricinfo</h3>
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="work">
-                    <img src="C:\Users\nsriv\Downloads\Tenders.png" alt="">
+                    <img src="https://user-images.githubusercontent.com/107460190/208251158-c1f62ecd-dcb8-40c9-9235-8617eab4c0c7.png" alt="">
                     <div class="layer">
 
                         <h3>SigmBid(Tender Management System)</h3>
