--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
                         <h3>Retomojo</h3>
                         <p>India's leading rental platform brings to you a wide range of products on rent. Experience
                             the freedom to live the life you want, now.</p>
+                       <div>
                         <a href="https://timely-gumdrop-6783b4.netlify.app"><i class="fa-solid fa-up-right-from-square"></i></a>
+                      <a href="https://github.com/sumitpanchal08/Rentomojo.com-clone"><i class="fa-brands fa-github"></i></a>
+                    </div>
                     </div>
                 </div>
 
@@ -156,8 +159,11 @@
                         <h3>ESPNCricinfo</h3>
                         <p>Find Live Cricket Scores, Match updates, Fixtures, Results, News, Articles, Video highlights
                             only at ESPNcricinfo.</p>
+                            <div>
                         <a href="https://deluxe-buttercream-9cdfdb.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
-                    </div>
+                    <a href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                </div>
                 </div>
 
                 <div class="work">
@@ -167,8 +173,11 @@
                         <h3>SigmBid(Tender Management System)</h3>
                         <p>This e-tendering software is a tool that supports run tenders and requests for proposals
                             further efficiently than email and phone.</p>
-                        <a href="https://github.com/niths2703/maxed-wilderness-6454"><i class="fa-solid fa-up-right-from-square"></i></a>
-                    </div>
+                            <div>
+                        <a href="https://drive.google.com/file/d/1UoBs37vD2OKOJ9coJMAkK9Td0FNLx679/view?usp=share_link"><i class="fa-solid fa-up-right-from-square"></i></a>
+                   <a href="https://github.com/niths2703/maxed-wilderness-6454"><i class="fa-brands fa-github"></i></a>
+                  </div>
+                </div>
                 </div>
 
 
