--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 
 
                 <div class="work">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Rentomojo-logo.png/800px-Rentomojo-logo.png"
+                    <img src="https://th.bing.com/th/id/OIP.eHI9RpId7aWejLXz7EJwngHaHa?pid=ImgDet&rs=1"
                         alt="">
                     <div class="layer">
                         <h3>Retomojo</h3>
                         <p>India's leading rental platform brings to you a wide range of products on rent. Experience
                             the freedom to live the life you want, now.</p>
-                       <div>
+                       <div class="icons">
                         <a href="https://timely-gumdrop-6783b4.netlify.app"><i class="fa-solid fa-up-right-from-square"></i></a>
                       <a href="https://github.com/sumitpanchal08/Rentomojo.com-clone"><i class="fa-brands fa-github"></i></a>
                     </div>
@@ -159,7 +159,7 @@
                         <h3>ESPNCricinfo</h3>
                         <p>Find Live Cricket Scores, Match updates, Fixtures, Results, News, Articles, Video highlights
                             only at ESPNcricinfo.</p>
-                            <div>
+                            <div class="icons">
                         <a href="https://deluxe-buttercream-9cdfdb.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     <a href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"><i class="fa-brands fa-github"></i></a>
                             </div>
@@ -173,7 +173,7 @@
                         <h3>SigmBid(Tender Management System)</h3>
                         <p>This e-tendering software is a tool that supports run tenders and requests for proposals
                             further efficiently than email and phone.</p>
-                            <div>
+                            <div class="icons">
                         <a href="https://drive.google.com/file/d/1UoBs37vD2OKOJ9coJMAkK9Td0FNLx679/view?usp=share_link"><i class="fa-solid fa-up-right-from-square"></i></a>
                    <a href="https://github.com/niths2703/maxed-wilderness-6454"><i class="fa-brands fa-github"></i></a>
                   </div>
