--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <img src="https://user-images.githubusercontent.com/107460190/208251158-c1f62ecd-dcb8-40c9-9235-8617eab4c0c7.png" alt="">
                     <div class="layer">
 
-                        <h3>SigmBid(Tender Management System)</h3>
+                        <h3>SigmaBid(Tender Management System)</h3>
                         <p>This e-tendering software is a tool that supports run tenders and requests for proposals
                             further efficiently than email and phone.</p>
                             <p>Tech Stack: Java | MySQL </p>
