--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Project</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="https://drive.google.com/file/d/1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb/view">Resume</a></li>
-            
+            <li><a href="https://drive.google.com/u/0/uc?id=1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb&export=download" download>Resume</a></li>
+            <!-- https://drive.google.com/file/d/1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb/view -->
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
