--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Project</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a   href="https://drive.google.com/u/0/uc?id=1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb&export=download" target="_blank" download>Resume</a></li>
+            <li><a   href="https://drive.google.com/file/d/1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb/view " target="_blank" download>Resume</a></li>
             <!--  https://drive.google.com/file/d/1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb/view -->
+            <!-- https://drive.google.com/u/0/uc?id=1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb&export=download -->
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
@@ -193,8 +194,8 @@
                             the freedom to live the life you want, now.</p>
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                        <div class="icons">
-                        <a href="https://timely-gumdrop-6783b4.netlify.app"><i class="fa-solid fa-up-right-from-square"></i></a>
-                      <a href="https://github.com/sumitpanchal08/Rentomojo.com-clone"><i class="fa-brands fa-github"></i></a>
+                        <a  href="https://timely-gumdrop-6783b4.netlify.app"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
+                      <a  href="https://github.com/sumitpanchal08/Rentomojo.com-clone"><button class="bigger"><i class="fa-brands fa-github"></i></button></a>
                     </div>
                     </div>
                 </div>
@@ -208,8 +209,8 @@
                             only at ESPNcricinfo.</p>
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                             <div class="icons">
-                        <a href="https://deluxe-buttercream-9cdfdb.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
-                    <a href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"><i class="fa-brands fa-github"></i></a>
+                        <a  href="https://deluxe-buttercream-9cdfdb.netlify.app/"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
+                    <a  href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
                             </div>
                 </div>
                 </div>
@@ -223,11 +224,26 @@
                             further efficiently than email and phone.</p>
                             <p>Tech Stack: Java | MySQL </p>
                             <div class="icons">
-                        <a href="https://drive.google.com/file/d/1UoBs37vD2OKOJ9coJMAkK9Td0FNLx679/view?usp=share_link"><i class="fa-solid fa-up-right-from-square"></i></a>
-                   <a href="https://github.com/niths2703/maxed-wilderness-6454"><i  class="fa-brands fa-github"></i></a>
+                        <a  href="https://drive.google.com/file/d/1UoBs37vD2OKOJ9coJMAkK9Td0FNLx679/view?usp=share_link"><button class="bigger"><i class="fa-solid fa-up-right-from-square"></i></button></a>
+                   <a  href="https://github.com/niths2703/maxed-wilderness-6454"><button class="bigger"><i  class="fa-brands fa-github"></i></button></a>
                   </div>
                 </div>
                 </div>
+
+                <div class="work">
+                    <img class="sweet" src="https://i.ibb.co/VJvD7Q0/Sweet-Mart.png" alt="">
+                    <div class="layer">
+                        <!-- [url=https://imgbb.com/][img]https://i.ibb.co/VJvD7Q0/Sweet-Mart.png[/img][/url] -->
+                        <h3>Online SweetMart(Java Spring)</h3>
+                        <p>SweetMart: Order delightful Ghee sweets, Kaju sweets, Traditional sweets, Sugarfree sweets from most authentic online sweet shop in Delhi.</p>
+                            <p>Tech Stack: Java | Hibernate |Spring Framework |Spring Boot | Spring Data JPA | MySQL | Maven | Swagger UI </p>
+                            <div class="icons">
+                        <a  href="https://drive.google.com/file/d/1dSyuVfvTbirU20_w1wAeGgSB2glFH-7j/view"><button class="bigger"><i class=" fa-solid fa-up-right-from-square"></i></button></a>
+                   <a href="https://github.com/niths2703/SweetMart-Java-Spring-"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
+                  </div>
+                </div>
+                </div>
+
 
 
             </div>
