--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                             the freedom to live the life you want, now.</p>
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                        <div class="icons">
-                        <a  href="https://timely-gumdrop-6783b4.netlify.app"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
-                      <a  href="https://github.com/sumitpanchal08/Rentomojo.com-clone"><button class="bigger"><i class="fa-brands fa-github"></i></button></a>
+                        <a  href="https://timely-gumdrop-6783b4.netlify.app"  target="_blank"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
+                      <a  href="https://github.com/sumitpanchal08/Rentomojo.com-clone"  target="_blank"><button class="bigger"><i class="fa-brands fa-github"></i></button></a>
                     </div>
                     </div>
                 </div>
@@ -208,8 +208,8 @@
                             only at ESPNcricinfo.</p>
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                             <div class="icons">
-                        <a  href="https://deluxe-buttercream-9cdfdb.netlify.app/"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
-                    <a  href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
+                        <a  href="https://deluxe-buttercream-9cdfdb.netlify.app/"  target="_blank"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
+                    <a  href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"  target="_blank"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
                             </div>
                 </div>
                 </div>
@@ -223,8 +223,8 @@
                             further efficiently than email and phone.</p>
                             <p>Tech Stack: Java | MySQL </p>
                             <div class="icons">
-                        <a  href="https://drive.google.com/file/d/1UoBs37vD2OKOJ9coJMAkK9Td0FNLx679/view?usp=share_link"><button class="bigger"><i class="fa-solid fa-up-right-from-square"></i></button></a>
-                   <a  href="https://github.com/niths2703/maxed-wilderness-6454"><button class="bigger"><i  class="fa-brands fa-github"></i></button></a>
+                        <a  href="https://drive.google.com/file/d/1UoBs37vD2OKOJ9coJMAkK9Td0FNLx679/view?usp=share_link"  target="_blank"><button class="bigger"><i class="fa-solid fa-up-right-from-square"></i></button></a>
+                   <a  href="https://github.com/niths2703/maxed-wilderness-6454"  target="_blank"><button class="bigger"><i  class="fa-brands fa-github"></i></button></a>
                   </div>
                 </div>
                 </div>
@@ -237,8 +237,8 @@
                         <p>SweetMart: Order delightful Ghee sweets, Kaju sweets, Traditional sweets, Sugarfree sweets from most authentic online sweet shop in Delhi.</p>
                             <p>Tech Stack: Java | Hibernate |Spring Framework |Spring Boot | Spring Data JPA | MySQL | Maven | Swagger UI </p>
                             <div class="icons">
-                        <a  href="https://drive.google.com/file/d/1dSyuVfvTbirU20_w1wAeGgSB2glFH-7j/view"><button class="bigger"><i class=" fa-solid fa-up-right-from-square"></i></button></a>
-                   <a href="https://github.com/niths2703/SweetMart-Java-Spring-"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
+                        <a  href="https://drive.google.com/file/d/1dSyuVfvTbirU20_w1wAeGgSB2glFH-7j/view"  target="_blank"><button class="bigger"><i class=" fa-solid fa-up-right-from-square"></i></button></a>
+                   <a href="https://github.com/niths2703/SweetMart-Java-Spring-"  target="_blank"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
                   </div>
                 </div>
                 </div>
@@ -264,10 +264,10 @@
                     
                     <p><i class="fa-duotone fa-phone"></i>+917355671230</p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/nitishsrivastava27/"><i
+                        <a href="https://www.linkedin.com/in/nitishsrivastava27/"  target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/niths2703"><i class="fa-brands fa-github"></i></i></a>
-                        <a href="https://www.instagram.com/niths27/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/niths2703"  target="_blank"><i class="fa-brands fa-github"></i></i></a>
+                        <a href="https://www.instagram.com/niths27/"  target="_blank"><i class="fa-brands fa-instagram"></i></a>
 
                     </div>
                     
