--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p id="para">My name is Nitish. I'm a Java Back-end Developer. Aspiring Java Backend Developer with a proficiency
+                <p id="para">This is Nitish Srivastava. Java Backend Developer with a proficiency
                     in Java, Spring Boot, SQL,Git, AWS, HTML, CSS, Javascript, Object-oriented, design And
                     Self-motivated and curious, with a keen interest in building user-centric products. Looking forward
                     to honing my skills in a challenging work environment .</p>
@@ -189,8 +189,9 @@
                         alt="">
                     <div class="layer">
                         <h3>Retomojo</h3>
-                        <p>India's leading rental platform brings to you a wide range of products on rent. Experience
-                            the freedom to live the life you want, now.</p>
+                        <p>A clone of the actual website of Rentomojo for the landing and product page. Products can be bought by Add To Cart Functionality. User can Sign-Up and Log-In.
+                            A fully responsive collaboratie project developed by team of 3 in 5 days.
+                            </p>
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                        <div class="icons">
                         <a  href="https://timely-gumdrop-6783b4.netlify.app"  target="_blank"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
@@ -204,8 +205,8 @@
                     <div class="layer">
 
                         <h3>ESPNCricinfo</h3>
-                        <p>Find Live Cricket Scores, Match updates, Fixtures, Results, News, Articles, Video highlights
-                            only at ESPNcricinfo.</p>
+                        <p>A clone of the actual website of ESPNCricinfo. The website has multiple pages including Live Scores and Live News.
+                            A fully responsive collaboratie project developed by team of 4 in 5 days.</p>
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                             <div class="icons">
                         <a  href="https://deluxe-buttercream-9cdfdb.netlify.app/"  target="_blank"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
@@ -220,7 +221,9 @@
 
                         <h3>SigmaBid(Tender Management System)</h3>
                         <p>This e-tendering software is a tool that supports run tenders and requests for proposals
-                            further efficiently than email and phone.</p>
+                            further efficiently than email and phone. A user can create bid for the tenders which are created by Admin.
+                           Admin can approve the bid and assign the tender to the user.
+                        </p>
                             <p>Tech Stack: Java | MySQL </p>
                             <div class="icons">
                         <a  href="https://drive.google.com/file/d/16ayfdkaH5qUkwriTcoSfTIHYtX0CDtnt/view?usp=share_link"  target="_blank"><button class="bigger"><i class="fa-solid fa-up-right-from-square"></i></button></a>
@@ -234,7 +237,9 @@
                     <div class="layer">
                         <!-- [url=https://imgbb.com/][img]https://i.ibb.co/VJvD7Q0/Sweet-Mart.png[/img][/url] -->
                         <h3>Online SweetMart(Java Spring)</h3>
-                        <p>SweetMart: Order delightful Ghee sweets, Kaju sweets, Traditional sweets, Sugarfree sweets from most authentic online sweet shop in Delhi.</p>
+                        <p>SweetMart: Order delightful Ghee sweets, Kaju sweets, Traditional sweets, Sugarfree sweets from most authentic online sweet shop in Delhi.
+                            A user can create orders for the sweets which would be approved by the Admin of SweetShop.
+                        </p>
                             <p>Tech Stack: Java | Hibernate |Spring Framework |Spring Boot | Spring Data JPA | MySQL | Maven | Swagger UI </p>
                             <div class="icons">
                         <a  href="https://drive.google.com/file/d/1dSyuVfvTbirU20_w1wAeGgSB2glFH-7j/view"  target="_blank"><button class="bigger"><i class=" fa-solid fa-up-right-from-square"></i></button></a>
