--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                        <div class="icons">
                         <a  href="https://timely-gumdrop-6783b4.netlify.app"  target="_blank"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
-                      <a  href="https://github.com/sumitpanchal08/Rentomojo.com-clone"  target="_blank"><button class="bigger"><i class="fa-brands fa-github"></i></button></a>
+                      <a  href="https://github.com/niths2703/Rentomojo.com-clone"  target="_blank"><button class="bigger"><i class="fa-brands fa-github"></i></button></a>
                     </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                             <p>Tech Stack: Javascript | HTML | CSS</p>
                             <div class="icons">
                         <a  href="https://deluxe-buttercream-9cdfdb.netlify.app/"  target="_blank"><button class="bigger"><i  class=" fa-solid fa-up-right-from-square"></i></button></a>
-                    <a  href="https://github.com/jithstephen13/ESPNcricinfo-gamy-lace-3375-"  target="_blank"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
+                    <a  href="https://github.com/niths2703/espncricinfo-clone-"  target="_blank"><button class="bigger"><i  class=" fa-brands fa-github"></i></button></a>
                             </div>
                 </div>
                 </div>
