--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <ul id="sidemenu">
             <i class="fa-solid fa-square-xmark" onclick="closemenu()"></i>
 
-            <li><a href="#header">Home</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#portfolio">Project</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a   href="https://drive.google.com/u/0/uc?id=1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb&export=download" download onclick="openResume()">Resume</a></li>
+            <li><a href="#header" onclick="closemenu()">Home</a></li>
+            <li><a href="#about" onclick="closemenu()">About Me</a></li>
+            <li><a href="#skills" onclick="closemenu()">Skills</a></li>
+            <li><a href="#portfolio" onclick="closemenu()">Project</a></li>
+            <li><a href="#contact" onclick="closemenu()">Contact</a></li>
+            <li><a   href="https://drive.google.com/u/0/uc?id=1lrvMMO3L6ybp7j70ZSUK1RyeuJkBEcvb&export=download" download onclick="openResume()" onclick="closemenu()">Resume</a></li>
             <!--  -->
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
